<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="about">About</string>
	<string name="app_about">(C) 2011 by Christoph Lorenz, www.uhrenbastler.de.\nAll rights reserved, no warranty at all!\nUse at your own risk!</string>
    <string name="app_name">WatchCheck</string>
    <string name="averageResult">Average deviation: %1$s s/day</string>
    <string name="currentDeviation">Current deviation: </string>
    <string name="dataExported">Data exported</string>
    <string name="edit">Edit</string>
    <string name="exportData">Export data</string>
    <string name="importData">Import data</string>
    <string name="delete">Delete</string>
    <string name="deleteWatch">Are you sure, you want to delete %s and all of its logs?</string>
    <string name="headerResultDailyDeviation">Deviation</string>
    <string name="headerResultOffset">Offset</string>
    <string name="headerResultTimestamp">Timestamp</string>
    <string name="headlineAddWatch">Add watch</string>
    <string name="headlineEditWatch">Edit watch</string>
    <string name="no">No</string>
    <string name="resultHeader">Period %1$d/%2$d\n(%3$s - %4$s)</string>
    <string name="timeOfYourWatch">Enter the time of your watch (seconds to zero)</string>
    <string name="warning">WARNING!</string>
    <string name="yes">Yes</string>
    <string name="OK">OK</string>
    <string name="buttonCheckTimeNtp">Measure (NTP precision)</string>
    <string name="buttonCheckTimeLocal">Measure (local precision)</string>
    <string name="mode">Measure mode: </string>
    <string name="modeNtp">NTP (Deviation: %s sec)</string>
    <string name="modeLocal">Local time (not precise!)</string>
    <string name="buttnLog">Log</string>
    <string name="headlineLog">Log</string>
    <string name="cancel">Cancel</string>
    <string name="measure">Measure</string>
    <string name="addWatch">add watch</string>
    <string name="selectWatch">select your watch</string>
    <string name="addWatchModel">Model: </string>
    <string name="addWatchSerial">Serial: </string>
    <string name="addWatchRemarks">Remarks: </string>
    <string name="watch">Watch to check: </string>
    <string name="newPeriod">New measure period: </string>
    <string name="position">Position: </string>
    <string name="temperature">Temperature: </string>
    <string name="comment">Comment: </string>
    <string name="deviation">Deviation: </string>
    <string name="zero">+- 0 sec</string>
    <string name="save">save</string>
    <string name="reloadDatabase">You are about to drop all contents of the existing database and reload its contents with the data, found on the sdcard.\nAfterwards, the app is closed and must be restarted again!\nAre you sure?</string>
</resources>
