<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <TableLayout android:layout_width="match_parent" 
    			android:layout_height="wrap_content" 
    			android:id="@+id/tableLayoutResultHeader">
  	<TableRow android:id="@+id/tableRowResult" android:layout_width="match_parent" android:layout_height="wrap_content">
        	<TextView android:layout_marginLeft="10dp" android:layout_height="wrap_content" android:id="@+id/headerResultTimestamp" android:layout_width="match_parent" android:gravity="left" android:layout_gravity="left" android:text="@string/headerResultTimestamp"></TextView>
        	<TextView android:layout_marginLeft="10dp" android:layout_height="wrap_content" android:id="@+id/headerResultOffset" android:layout_width="match_parent" android:gravity="left" android:layout_gravity="left" android:text="@string/headerResultOffset"></TextView>
        	<TextView android:layout_marginLeft="10dp" android:layout_height="wrap_content" android:id="@+id/headerResultDailyDeviation" android:layout_width="match_parent" android:gravity="left" android:layout_gravity="left" android:text="@string/headerResultDailyDeviation"></TextView>
        </TableRow>
  </TableLayout>
    <ListView android:id="@+id/resultListView" android:layout_height="wrap_content" android:layout_width="match_parent"></ListView>
</LinearLayout>
