<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:id="@+id/watchCheckView"
    >
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:orientation="vertical">
        <TableLayout android:id="@+id/tableLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        	<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/watch"/> 
    			<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:id="@+id/watchModel"/>    
            </TableRow>
        </TableLayout>
    </LinearLayout>
	<TextView  
	    android:layout_width="fill_parent" 
	    android:text="@string/timeOfYourWatch" android:layout_marginTop="30dp" android:layout_height="wrap_content" />
	       
	<TimePicker android:id="@+id/TimePicker1" 
				android:gravity="center_horizontal"
				android:layout_height="wrap_content" 
 				android:layout_width="wrap_content" 
 				android:layout_weight="0"
				android:layout_marginTop="20dp"/>
	
	
	<LinearLayout android:layout_width="fill_parent" android:layout_marginTop="30dp" android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:orientation="vertical">
        <TableLayout android:id="@+id/tableLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content">
        	<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/currentDeviation"/> 
    			<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:id="@+id/currentDeviation"/>    
            </TableRow>
        </TableLayout>
    </LinearLayout>
	
	<LinearLayout android:layout_width="fill_parent"
	  	android:layout_height="fill_parent"
	  	android:layout_gravity="bottom"
	  	android:orientation="horizontal">
		<FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/frameLayout1" android:background="#AA999999"  android:padding="10dp" android:layout_gravity="bottom">
			<Button android:layout_height="wrap_content" android:id="@+id/buttonCheckTime" android:layout_width="fill_parent" android:text="@string/measure"></Button>
		</FrameLayout>
	</LinearLayout>
</LinearLayout>
